package classes;

public class Servico {

    private String nome;

    public Servico(String nome) {
        this.nome = nome;
    }

    public String getNome() {
        return nome;
    }
}